--- a/package.json
+++ b/package.json
@@ -3,16 +3,34 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-basic-styles": "^38.1.0",
         "@ckeditor/ckeditor5-build-classic": "^38.0.1",
-        "@ckeditor/ckeditor5-core": "^38.0.1",
+        "@ckeditor/ckeditor5-core": "^38.1.0",
+        "@ckeditor/ckeditor5-dev-utils": "^38.0.2",
+        "@ckeditor/ckeditor5-editor-classic": "^38.1.0",
+        "@ckeditor/ckeditor5-essentials": "^38.1.0",
+        "@ckeditor/ckeditor5-heading": "^38.1.0",
+        "@ckeditor/ckeditor5-inspector": "^4.1.0",
+        "@ckeditor/ckeditor5-list": "^38.1.0",
+        "@ckeditor/ckeditor5-paragraph": "^38.1.0",
         "@ckeditor/ckeditor5-react": "^6.1.0",
+        "@ckeditor/ckeditor5-theme-lark": "^38.1.0",
+        "@ckeditor/ckeditor5-ui": "^38.1.0",
+        "@ckeditor/ckeditor5-utils": "^38.1.0",
+        "@ckeditor/ckeditor5-widget": "^38.1.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "css-loader": "^5.2.7",
+        "postcss-loader": "^4.3.0",
+        "raw-loader": "^4.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "style-loader": "^2.0.0",
+        "web-vitals": "^2.1.4",
+        "webpack": "^5.88.1",
+        "webpack-cli": "^4.10.0"
     },
     "scripts": {
         "start": "react-scripts start",
